# UKG_Release_Impact_Radar

./: .env.example  .gitignore  00-repo-overview.md  01-setup-local-and-storage.md  02-security.md  03-contributing.md  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run-generator.ps1
.github/: generate-transcripts.yml
config/: build-profiles.yaml  export-object-catalog.yaml  generator-contract.yaml  project-object-profiles.yaml
control-plane/: frozen-invariants.yaml  scenario-calendar.yaml  worker-harm-signal-catalog.yaml
docs/: 00-scope.md  01-architecture.md  02-data-contracts.md  03-flow-inventory.md  04-runbook.md  05-change-log.md  06-flow-01-snapshot.md  07-flow-02-release-ingest.md  08-mapping-rules.md  09-flow-03-compute-impact.md  10-impact-report-template.md  11-change-log-template.md  12-needs-review-template.md  13-repo-normalization.md  14-add-flow-ready-folders.md  15-storage-and-naming-conventions.md  16-flow-export-and-versioning.md  MIGRATION-FROM-FOUNDATION.md  OUTPUT-CONTRACT.md  SOURCE-RECONCILIATION.md  SUPABASE-DEPLOYMENT.md  TENANT-GENERATOR-MATRIX.md
foundation/: FOUNDATION-PACKAGE-INDEX.json  foundation-to-generator-map.yaml
generator/: assurance.py  calendar.py  cli.py  config.py  engine.py  io.py  sdm.py  seeds.py  supabase.py
mappings/: touchpoints.json  touchpoints.yml
packs/: cms_482_23.yaml  collective_bargaining_heuristic.yaml  faa_ac_117_2.yaml  faa_part_117.yaml  flsa_healthcare_hours.yaml  flsa_hours_worked.yaml  fmcsa_hos_summary.yaml  gdpr_article_9.yaml  illinois_bipa.yaml  (+9 more)
(+48 files in other folders)
